# InfinityAlamo

./: .env.example  .gitignore  CLIENT_READINESS.md  KNOWN_LIMITATIONS.md  README.md  REGEX_IMPROVEMENTS_PROPOSAL.md  SECURITY.md  SETUP_GUIDE.md  demo.ps1  demo.sh  launch_portal_tester.bat  launch_portal_tester.ps1  pyproject.toml
assets/: generate_icon.py
config/: counties.yaml
installer/: InfinityAlamoDemo.iss  README.md  build_exe.ps1  build_installer.ps1
src/infinityalamo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/probate/: __init__.py  __main__.py  cli.py  config.py  logging.py  models.py  pipeline.py  storage.py
src/probate/connectors/: __init__.py  base.py  demo_county.py  democounty2.py  examplecounty_connector.py  loader.py
src/probate/output/: __init__.py  excel.py
src/probate/pdf/: __init__.py  download.py  downloader.py  extract_text.py  field_extract.py  ocr.py  parse_fields.py  text_extract.py
tests/: conftest.py  test_field_extract.py  test_ocr.py  test_parse_fields.py  test_pipeline_smoke.py  test_text_extract.py
tests/fixtures/: sample_case_text.txt
tools/: portal_scraper_demo.py  portal_tester.py
