[project]
name = "infinityalamo"
version = "0.1.0"
description = "Automated daily Texas probate extraction and PDF parsing pipeline"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "click>=8.1",
  "tenacity>=8.2",
  "requests>=2.31",
  "playwright>=1.42",
  "pdfplumber>=0.11",
  "pytesseract>=0.3",
  "pillow>=10.2",
  "pandas>=2.2",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
